src/test/deca/syntax/valid/homemade/test/test_pars_val_if_elseif.deca
// Description:
//    Programme minimaliste testant l'arbre d'affectation de l'instruction if.
//
// Resultats:
//    3
//
// Historique:
//    cree le 01/01/2023


{
    int x = 3;
    if (x < 5 ){
        println(x);
    }
    else if (x = 4){
        println(x);
    }
}